2003-12-14  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, src/gerbv.c, src/log.c, src/setup.h: It is now 
	  possible to compile gerbv with GTK+ 2.*, at least tested with
	  2.2.4. There are still some problems, particulary in log.c. 
	  GtkText is deprecated, but I have enabled GTK_ENABLE_BROKEN.
	  This needs a more permanent solution. This closes Feature 
	  Request #771480, but probably opens up some new ones.

2003-12-10  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Projects saves and restores background color.

	* src/gerbv.c, src/gerbv_screen.h: Added Save Project and handles
	  if a filename was given, either when loading or a previous save.

2003-12-09  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, */Makefile.am: Added a recursive chain of Makefile.am
	  to be able to run make dist and make distcheck. Proposed by Dan 
	  McMahill. Thanks!

2003-12-07  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c, src/project.[hc]: Project now saves ev. inversion of
	  layer, all layers accept all parameters and commandline switch
	  --project=<project file> also works.

	* src/gerbv.c, src/gerbv_screen.h: Added invert layer functionality.
	  Closes feature request 777547.

2003-12-06  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_file.[hc]: Added function gerb_find_file.
	* src/draw_amacro.c: Forgot to make some internal functions static.
	* src/*: Scheme interpreter added to be used by project files as a 
	  start. Also project file handling added. A short description of
	  the format used in project files also added. A massive commit.

2003-11-22  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, acconfig.h: acconfig.h removed and more information
	  added to configure.in after information in warning messages from
	  autoheader.

2003-11-13  Stefan Petersen  <spe@stacken.kth.se>

	* src/export_image.c: Changes pixbuf_to_file_as_png simplify operation
	  No major speedup since that is not the time hog.

-- Release 0.15 --
